fix blog category selection on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1420,12 +1420,13 @@ color: white;
 display: flex;
 }
 
-@media (max-width: 767px){
+@media (max-width: 767px) {
   .flex-icons {
     display: block;
   }
-  .flex-icons > a:hover{
-    background-color: transparent !important;
+  .flex-icons > a {
+    padding: 2.5rem 1rem 1rem 1rem !important;
+    display: block;
   }
 }
 
